# nutrisync

./: README.md  Untitled-1.ipynb  Workflow.md  db-cleanup.py  dev.db  ee.tex  exercise-seeder.py  export_req.txt  main.py  populate_exercises.py  prismaBackup  pyproject.toml  record of tasks.md  schema.prisma  test-plan.md
nutrisync_2/: AchievementSystem.py  Dashboard copy.py  Dashboard.py  GoalSystem.py  GoalTracker.py  GymTrackerApp.py  History.py  LoginPage.py  Page.py  Profile.py  ProgressTracking.py  WorkoutLogger.py  WorkoutPlans.py
